fixed terms alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -227,7 +227,7 @@ li {
 }
 
 .policy>p {
-  text-align: justify;
+  text-align: left;
 }
 
 .main-list {
